feat(exception): expand global error handling with specific database and validation exceptions