@@ -5,7 +5,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.dao.DuplicateKeyException;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -15,63 +14,129 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 @Slf4j
 public class ControllerAdvice {
-    @ExceptionHandler (DuplicateKeyException.class)
-    public ResponseEntity<Map<String,Object>> handleDuplicateKeyException(DuplicateKeyException e, HttpServletRequest request) {
-        log.error("DB integrity violation", e);
-        String root = e.getMostSpecificCause() != null ? e.getMostSpecificCause().getMessage() : e.getMessage();
+    @ExceptionHandler(DuplicateKeyException.class)
+    public ResponseEntity<?> handleDuplicateKeyException(
+            DuplicateKeyException e,
+            HttpServletRequest request
+    ) {
+        log.warn("Duplicate key violation: {}", e.getMessage());
 
-        Matcher m = Pattern.compile("Duplicate entry '(.+?)'").matcher(root == null ? "" : root);
-        String message = m.find() ? "LR " + m.group(1) + " already exists" : "Unique constraint violated";
-
-        Map<String,Object> body = new HashMap<>();
-        body.put("timestamp", OffsetDateTime.now().toString());
-        body.put("status", 409);
-        body.put("error","Conflict");
-        body.put("message", message);
-        body.put("path", request.getRequestURI());
-
-        log.info("Returning 409 body: {}", body);
-
-        return ResponseEntity.status(409)
-                .header("Content-Type", "application/json")
-                .body(body);
+        return ResponseEntity.status(409).body(
+                errorBody(
+                        409,
+                        "Conflict",
+                        e.getMessage(),
+                        request
+                )
+        );
     }
 
-
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<?> handleMethodArgumentNotValidException(MethodArgumentNotValidException e, HttpServletRequest request) {
-        List<FieldError> fieldErrors = e.getBindingResult().getFieldErrors();
-        List<Map<String, String>> errors = fieldErrors.stream().map(fe -> Map.of("field", fe.getField(), "message", fe.getDefaultMessage())).collect(Collectors.toList());
+    public ResponseEntity<?> handleMethodArgumentNotValidException(
+            MethodArgumentNotValidException e,
+            HttpServletRequest request
+    ) {
+        List<Map<String, String>> errors =
+                e.getBindingResult()
+                        .getFieldErrors()
+                        .stream()
+                        .map(fe -> Map.of(
+                                "field", fe.getField(),
+                                "message", fe.getDefaultMessage()
+                        ))
+                        .toList();
 
-        Map<String,Object> body = new HashMap<>();
+        Map<String, Object> body =
+                errorBody(400, "Bad Request", "Validation failed", request);
 
-        body.put("timestamp", OffsetDateTime.now().toString());
-        body.put("status", 400);
-        body.put("error", "Bad Request");
-        body.put("message", "Validation failed");
         body.put("errors", errors);
-        body.put("path", request.getRequestURI());
 
-        return ResponseEntity.status(400).body(body);
+        return ResponseEntity.badRequest().body(body);
+    }
+
+    @ExceptionHandler(IllegalArgumentException.class)
+    public ResponseEntity<?> handleIllegalArgumentException(
+            IllegalArgumentException e,
+            HttpServletRequest request
+    ) {
+        return ResponseEntity.badRequest().body(
+                errorBody(
+                        400,
+                        "Bad Request",
+                        e.getMessage(),
+                        request
+                )
+        );
     }
 
     @ExceptionHandler(NoSuchElementException.class)
-    public ResponseEntity<?> handleNoSuchElementException(NoSuchElementException e, HttpServletRequest request) {
+    public ResponseEntity<?> handleNoSuchElementException(
+            NoSuchElementException e,
+            HttpServletRequest request
+    ) {
         log.warn("Resource not found: {}", e.getMessage());
-        Map<String,Object> body = new HashMap<>();
+
+        return ResponseEntity.status(404).body(
+                errorBody(
+                        404,
+                        "Not Found",
+                        e.getMessage(),
+                        request
+                )
+        );
+    }
+
+    @ExceptionHandler(DataIntegrityViolationException.class)
+    public ResponseEntity<?> handleDataIntegrityViolation(
+            DataIntegrityViolationException e,
+            HttpServletRequest request
+    ) {
+        log.error("Data integrity violation", e);
+
+        return ResponseEntity.status(409).body(
+                errorBody(
+                        409,
+                        "Conflict",
+                        "Database constraint violated",
+                        request
+                )
+        );
+    }
+
+    @ExceptionHandler(Exception.class)
+    public ResponseEntity<?> handleUnhandledException(
+            Exception e,
+            HttpServletRequest request
+    ) {
+        log.error("Unhandled exception", e);
+
+        return ResponseEntity.status(500).body(
+                errorBody(
+                        500,
+                        "Internal Server Error",
+                        "Something went wrong. Please try again later.",
+                        request
+                )
+        );
+    }
+
+    private Map<String, Object> errorBody(
+            int status,
+            String error,
+            String message,
+            HttpServletRequest request
+    ) {
+        Map<String, Object> body = new HashMap<>();
         body.put("timestamp", OffsetDateTime.now().toString());
-        body.put("status", 404);
-        body.put("error", "Not Found");
-        body.put("message", e.getMessage());
+        body.put("status", status);
+        body.put("error", error);
+        body.put("message", message);
         body.put("path", request.getRequestURI());
-        return ResponseEntity.status(404).body(body);
+        return body;
     }
 
 }
